# protodef-rs

./: Cargo.toml  README.md  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: main.yml
cli/: Cargo.toml
cli/src/: main.rs
codegen/: Cargo.toml
codegen/src/: lib.rs
codegen/src/backend/: mod.rs
codegen/src/lowering/: analysis.rs  mod.rs
codegen/src/syntax/: ast.rs  errors.rs  mod.rs  parse.rs
codegen/tests/: smoke_test.rs
core/: Cargo.toml
core/src/: lib.rs  native.rs
examples/: cli.rs
protodef_cli/: all.html  fn.main.html  index.html
protodef_codegen/: all.html  index.html  sidebar-items.js
protodef_codegen/backend/: fn.generate_rust.html  fn.rustfmt.html  index.html  sidebar-items.js
protodef_codegen/lowering/: enum.Diagnostic.html  enum.Type.html  enum.Variant.html  fn.lower.html  index.html  sidebar-items.js  struct.BitFields.html  struct.CompilationUnit.html  struct.Diagnostics.html  struct.Enum.html  struct.Field.html  struct.LengthPrefixedString.html  struct.Struct.html  struct.TypeId.html
protodef_codegen/syntax/: enum.ErrorKind.html  enum.Type.html  fn.parse.html  index.html  sidebar-items.js  struct.BitField.html  struct.BitFields.html  struct.Container.html  struct.Field.html  struct.Mapper.html  struct.ParseError.html  struct.Protocol.html  struct.Switch.html
protodef_core/: all.html  enum.DeserializeError.html  index.html  sidebar-items.js  trait.Deserialize.html
serde_json/: enum.Value.html  struct.Map.html  struct.Number.html
src/: lib.rs
src/backend/: mod.rs
tests/: smoke_test.rs
(+80 files in other folders)
