[package]
name = "protodef"
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
publish = false

[dependencies]
indexmap = "1.6.1"
proc-macro2 = "1.0.24"
quote = "1.0.8"
serde_json = "1.0.61"

[dev-dependencies]
pretty_assertions = "0.6.1"
