[package]
name = "protodef-cli"
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
publish = false
description = "A Rust code generator for the ProtoDef protocol specification format."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protodef-codegen = { path = "../codegen" }
serde_json = "1.0.61"
